mpt06/compilador.output
Grammar

    0 $accept: programa $end

    1 $@1: /* empty */

    2 $@2: /* empty */

    3 programa: PROGRAM IDENT $@1 ABRE_PARENTESES lista_idents $@2 FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    4 lista_idents: lista_idents VIRGULA ident
    5             | ident

    6 ident: IDENT

    7 $@3: /* empty */

    8 bloco: parte_declara_labels parte_declara_vars $@3 parte_declara_procs T_BEGIN comandos T_END

    9 parte_declara_labels: parte_declara_label
   10                     | /* empty */

   11 parte_declara_label: parte_declara_label label
   12                    | label

   13 label: LABEL lista_id_labels PONTO_E_VIRGULA

   14 lista_id_labels: lista_id_labels VIRGULA id_label
   15                | id_label

   16 id_label: IDENT insere_label
   17         | NUMERO insere_label

   18 insere_label: /* empty */

   19 parte_declara_vars: parte_declara_var
   20                   | /* empty */

   21 parte_declara_var: parte_declara_var var
   22                  | var

   23 var: VAR declara_vars

   24 declara_vars: declara_vars declara_var PONTO_E_VIRGULA
   25             | declara_var PONTO_E_VIRGULA

   26 $@4: /* empty */

   27 declara_var: $@4 lista_id_var DOIS_PONTOS tipo

   28 lista_id_var: lista_id_var VIRGULA id_var
   29             | id_var

   30 id_var: IDENT

   31 tipo: INTEGER
   32     | BOOLEAN
   33     | STRING

   34 $@5: /* empty */

   35 parte_declara_procs: $@5 declara_procs
   36                    | /* empty */

   37 declara_procs: declara_procs declara_proc
   38              | declara_proc

   39 $@6: /* empty */

   40 $@7: /* empty */

   41 declara_proc: PROCEDURE $@6 assinatura PONTO_E_VIRGULA bloco $@7 PONTO_E_VIRGULA

   42 $@8: /* empty */

   43 $@9: /* empty */

   44 declara_proc: FUNCTION $@8 assinatura DOIS_PONTOS tipo_retorno PONTO_E_VIRGULA bloco $@9 PONTO_E_VIRGULA

   45 $@10: /* empty */

   46 assinatura: IDENT $@10 declara_params

   47 declara_params: ABRE_PARENTESES qtde_params FECHA_PARENTESES
   48               | /* empty */

   49 qtde_params: lista_params
   50            | /* empty */

   51 lista_params: lista_params PONTO_E_VIRGULA passagem_params
   52             | passagem_params

   53 $@11: /* empty */

   54 passagem_params: VAR $@11 declara_param
   55                | declara_param

   56 $@12: /* empty */

   57 declara_param: $@12 lista_id_param DOIS_PONTOS tipo_param

   58 lista_id_param: lista_id_param VIRGULA param
   59               | param

   60 param: IDENT

   61 tipo_param: INTEGER
   62           | BOOLEAN
   63           | STRING

   64 tipo_retorno: INTEGER
   65             | BOOLEAN
   66             | STRING

   67 comando_composto: T_BEGIN comandos T_END
   68                 | comando

   69 comandos: comandos PONTO_E_VIRGULA comando
   70         | comando

   71 comando: goto
   72        | rot
   73        | atrib_proc_rot
   74        | write
   75        | read
   76        | repetitivo
   77        | if
   78        | /* empty */

   79 goto: GOTO rotulo

   80 rotulo: IDENT simbora
   81       | NUMERO simbora

   82 simbora: /* empty */

   83 $@13: /* empty */

   84 rot: NUMERO $@13 goto_dest

   85 $@14: /* empty */

   86 atrib_proc_rot: IDENT $@14 proc_ou_atrib

   87 proc_ou_atrib: ATRIBUICAO expressao
   88              | goto_dest

   89 $@15: /* empty */

   90 proc_ou_atrib: ABRE_PARENTESES $@15 inicia_params lista_parametros finaliza_params FECHA_PARENTESES

   91 $@16: /* empty */

   92 proc_ou_atrib: $@16 inicia_params finaliza_params

   93 $@17: /* empty */

   94 goto_dest: DOIS_PONTOS $@17 comando

   95 lista_parametros: parametros
   96                 | /* empty */

   97 parametros: parametros VIRGULA parametro
   98           | parametro

   99 parametro: expressao

  100 inicia_params: /* empty */

  101 finaliza_params: /* empty */

  102 expressao: NOT logica
  103          | expressao AND logica
  104          | expressao OR logica
  105          | logica

  106 logica: logica MAIOR aritmetica
  107       | logica MENOR aritmetica
  108       | logica IGUAL aritmetica
  109       | logica MENOR MAIOR aritmetica
  110       | logica DIFERENTE aritmetica
  111       | logica MAIOR IGUAL aritmetica
  112       | logica MENOR IGUAL aritmetica
  113       | aritmetica

  114 aritmetica: aritmetica MAIS termo
  115           | aritmetica MENOS termo
  116           | termo

  117 termo: termo MULT fator
  118      | termo DIV fator
  119      | fator

  120 $@18: /* empty */

  121 fator: IDENT $@18 funcao_ou_nao
  122      | NUMERO
  123      | TRUE
  124      | FALSE
  125      | ABRE_PARENTESES expressao FECHA_PARENTESES

  126 $@19: /* empty */

  127 funcao_ou_nao: ABRE_PARENTESES $@19 inicia_params lista_parametros finaliza_params FECHA_PARENTESES
  128              | /* empty */

  129 write: WRITE ABRE_PARENTESES escrita FECHA_PARENTESES
  130      | WRITELN ABRE_PARENTESES escrita FECHA_PARENTESES

  131 escrita: escrita VIRGULA impr
  132        | impr

  133 impr: expressao

  134 read: READ ABRE_PARENTESES leitura FECHA_PARENTESES

  135 leitura: leitura VIRGULA leit
  136        | leit

  137 leit: IDENT

  138 repetitivo: while
  139           | repeat
  140           | for

  141 $@20: /* empty */

  142 $@21: /* empty */

  143 while: WHILE $@20 expressao $@21 DO comando_composto

  144 $@22: /* empty */

  145 repeat: REPEAT $@22 comandos UNTIL expressao

  146 $@23: /* empty */

  147 $@24: /* empty */

  148 for: FOR IDENT $@23 ATRIBUICAO expressao $@24 to_ou_downto DO comando_composto

  149 $@25: /* empty */

  150 to_ou_downto: $@25 TO expressao

  151 $@26: /* empty */

  152 to_ou_downto: $@26 DOWNTO expressao

  153 if: if_then could_else

  154 $@27: /* empty */

  155 if_then: IF expressao $@27 THEN comando_composto

  156 $@28: /* empty */

  157 could_else: ELSE $@28 comando_composto
  158           | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM (258) 3
ABRE_PARENTESES (259) 3 47 90 125 127 129 130 134
FECHA_PARENTESES (260) 3 47 90 125 127 129 130 134
GOTO (261) 79
VIRGULA (262) 4 14 28 58 97 131 135
PONTO_E_VIRGULA (263) 3 13 24 25 41 44 51 69
DOIS_PONTOS (264) 27 44 57 94
PONTO (265) 3
T_BEGIN (266) 8 67
T_END (267) 8 67
VAR (268) 23 54
IDENT (269) 3 6 16 30 46 60 80 86 121 137 148
ATRIBUICAO (270) 87 148
FALSE (271) 124
TRUE (272) 123
MAIS (273) 114
MENOS (274) 115
MULT (275) 117
DIV (276) 118
NOT (277) 102
AND (278) 103
OR (279) 104
MAIOR (280) 106 109 111
MENOR (281) 107 109 112
IGUAL (282) 108 111 112
DIFERENTE (283) 110
NUMERO (284) 17 81 84 122
READ (285) 134
WRITE (286) 129
WRITELN (287) 130
INTEGER (288) 31 61 64
BOOLEAN (289) 32 62 65
STRING (290) 33 63 66
WHILE (291) 143
DO (292) 143 148
REPEAT (293) 145
UNTIL (294) 145
FOR (295) 148
TO (296) 150
DOWNTO (297) 152
IF (298) 155
THEN (299) 155
ELSE (300) 157
PROCEDURE (301) 41
FUNCTION (302) 44
LABEL (303) 13
LOWER_THAN_ELSE (304)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
programa (51)
    on left: 3, on right: 0
$@1 (52)
    on left: 1, on right: 3
$@2 (53)
    on left: 2, on right: 3
lista_idents (54)
    on left: 4 5, on right: 3 4
ident (55)
    on left: 6, on right: 4 5
bloco (56)
    on left: 8, on right: 3 41 44
$@3 (57)
    on left: 7, on right: 8
parte_declara_labels (58)
    on left: 9 10, on right: 8
parte_declara_label (59)
    on left: 11 12, on right: 9 11
label (60)
    on left: 13, on right: 11 12
lista_id_labels (61)
    on left: 14 15, on right: 13 14
id_label (62)
    on left: 16 17, on right: 14 15
insere_label (63)
    on left: 18, on right: 16 17
parte_declara_vars (64)
    on left: 19 20, on right: 8
parte_declara_var (65)
    on left: 21 22, on right: 19 21
var (66)
    on left: 23, on right: 21 22
declara_vars (67)
    on left: 24 25, on right: 23 24
declara_var (68)
    on left: 27, on right: 24 25
$@4 (69)
    on left: 26, on right: 27
lista_id_var (70)
    on left: 28 29, on right: 27 28
id_var (71)
    on left: 30, on right: 28 29
tipo (72)
    on left: 31 32 33, on right: 27
parte_declara_procs (73)
    on left: 35 36, on right: 8
$@5 (74)
    on left: 34, on right: 35
declara_procs (75)
    on left: 37 38, on right: 35 37
declara_proc (76)
    on left: 41 44, on right: 37 38
$@6 (77)
    on left: 39, on right: 41
$@7 (78)
    on left: 40, on right: 41
$@8 (79)
    on left: 42, on right: 44
$@9 (80)
    on left: 43, on right: 44
assinatura (81)
    on left: 46, on right: 41 44
$@10 (82)
    on left: 45, on right: 46
declara_params (83)
    on left: 47 48, on right: 46
qtde_params (84)
    on left: 49 50, on right: 47
lista_params (85)
    on left: 51 52, on right: 49 51
passagem_params (86)
    on left: 54 55, on right: 51 52
$@11 (87)
    on left: 53, on right: 54
declara_param (88)
    on left: 57, on right: 54 55
$@12 (89)
    on left: 56, on right: 57
lista_id_param (90)
    on left: 58 59, on right: 57 58
param (91)
    on left: 60, on right: 58 59
tipo_param (92)
    on left: 61 62 63, on right: 57
tipo_retorno (93)
    on left: 64 65 66, on right: 44
comando_composto (94)
    on left: 67 68, on right: 143 148 155 157
comandos (95)
    on left: 69 70, on right: 8 67 69 145
comando (96)
    on left: 71 72 73 74 75 76 77 78, on right: 68 69 70 94
goto (97)
    on left: 79, on right: 71
rotulo (98)
    on left: 80 81, on right: 79
simbora (99)
    on left: 82, on right: 80 81
rot (100)
    on left: 84, on right: 72
$@13 (101)
    on left: 83, on right: 84
atrib_proc_rot (102)
    on left: 86, on right: 73
$@14 (103)
    on left: 85, on right: 86
proc_ou_atrib (104)
    on left: 87 88 90 92, on right: 86
$@15 (105)
    on left: 89, on right: 90
$@16 (106)
    on left: 91, on right: 92
goto_dest (107)
    on left: 94, on right: 84 88
$@17 (108)
    on left: 93, on right: 94
lista_parametros (109)
    on left: 95 96, on right: 90 127
parametros (110)
    on left: 97 98, on right: 95 97
parametro (111)
    on left: 99, on right: 97 98
inicia_params (112)
    on left: 100, on right: 90 92 127
finaliza_params (113)
    on left: 101, on right: 90 92 127
expressao (114)
    on left: 102 103 104 105, on right: 87 99 103 104 125 133 143 145
    148 150 152 155
logica (115)
    on left: 106 107 108 109 110 111 112 113, on right: 102 103 104
    105 106 107 108 109 110 111 112
aritmetica (116)
    on left: 114 115 116, on right: 106 107 108 109 110 111 112 113
    114 115
termo (117)
    on left: 117 118 119, on right: 114 115 116 117 118
fator (118)
    on left: 121 122 123 124 125, on right: 117 118 119
$@18 (119)
    on left: 120, on right: 121
funcao_ou_nao (120)
    on left: 127 128, on right: 121
$@19 (121)
    on left: 126, on right: 127
write (122)
    on left: 129 130, on right: 74
escrita (123)
    on left: 131 132, on right: 129 130 131
impr (124)
    on left: 133, on right: 131 132
read (125)
    on left: 134, on right: 75
leitura (126)
    on left: 135 136, on right: 134 135
leit (127)
    on left: 137, on right: 135 136
repetitivo (128)
    on left: 138 139 140, on right: 76
while (129)
    on left: 143, on right: 138
$@20 (130)
    on left: 141, on right: 143
$@21 (131)
    on left: 142, on right: 143
repeat (132)
    on left: 145, on right: 139
$@22 (133)
    on left: 144, on right: 145
for (134)
    on left: 148, on right: 140
$@23 (135)
    on left: 146, on right: 148
$@24 (136)
    on left: 147, on right: 148
to_ou_downto (137)
    on left: 150 152, on right: 148
$@25 (138)
    on left: 149, on right: 150
$@26 (139)
    on left: 151, on right: 152
if (140)
    on left: 153, on right: 77
if_then (141)
    on left: 155, on right: 153
$@27 (142)
    on left: 154, on right: 155
could_else (143)
    on left: 157 158, on right: 153
$@28 (144)
    on left: 156, on right: 157


state 0

    0 $accept: . programa $end

    PROGRAM  shift, and go to state 1

    programa  go to state 2


state 1

    3 programa: PROGRAM . IDENT $@1 ABRE_PARENTESES lista_idents $@2 FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 3


state 2

    0 $accept: programa . $end

    $end  shift, and go to state 4


state 3

    3 programa: PROGRAM IDENT . $@1 ABRE_PARENTESES lista_idents $@2 FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    $default  reduce using rule 1 ($@1)

    $@1  go to state 5


state 4

    0 $accept: programa $end .

    $default  accept


state 5

    3 programa: PROGRAM IDENT $@1 . ABRE_PARENTESES lista_idents $@2 FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


state 6

    3 programa: PROGRAM IDENT $@1 ABRE_PARENTESES . lista_idents $@2 FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    lista_idents  go to state 8
    ident         go to state 9


state 7

    6 ident: IDENT .

    $default  reduce using rule 6 (ident)


state 8

    3 programa: PROGRAM IDENT $@1 ABRE_PARENTESES lista_idents . $@2 FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
    4 lista_idents: lista_idents . VIRGULA ident

    VIRGULA  shift, and go to state 10

    $default  reduce using rule 2 ($@2)

    $@2  go to state 11


state 9

    5 lista_idents: ident .

    $default  reduce using rule 5 (lista_idents)


state 10

    4 lista_idents: lista_idents VIRGULA . ident

    IDENT  shift, and go to state 7

    ident  go to state 12


state 11

    3 programa: PROGRAM IDENT $@1 ABRE_PARENTESES lista_idents $@2 . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    FECHA_PARENTESES  shift, and go to state 13


state 12

    4 lista_idents: lista_idents VIRGULA ident .

    $default  reduce using rule 4 (lista_idents)


state 13

    3 programa: PROGRAM IDENT $@1 ABRE_PARENTESES lista_idents $@2 FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 14


state 14

    3 programa: PROGRAM IDENT $@1 ABRE_PARENTESES lista_idents $@2 FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    LABEL  shift, and go to state 15

    $default  reduce using rule 10 (parte_declara_labels)

    bloco                 go to state 16
    parte_declara_labels  go to state 17
    parte_declara_label   go to state 18
    label                 go to state 19


state 15

   13 label: LABEL . lista_id_labels PONTO_E_VIRGULA

    IDENT   shift, and go to state 20
    NUMERO  shift, and go to state 21

    lista_id_labels  go to state 22
    id_label         go to state 23


state 16

    3 programa: PROGRAM IDENT $@1 ABRE_PARENTESES lista_idents $@2 FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 24


state 17

    8 bloco: parte_declara_labels . parte_declara_vars $@3 parte_declara_procs T_BEGIN comandos T_END

    VAR  shift, and go to state 25

    $default  reduce using rule 20 (parte_declara_vars)

    parte_declara_vars  go to state 26
    parte_declara_var   go to state 27
    var                 go to state 28


state 18

    9 parte_declara_labels: parte_declara_label .
   11 parte_declara_label: parte_declara_label . label

    LABEL  shift, and go to state 15

    $default  reduce using rule 9 (parte_declara_labels)

    label  go to state 29


state 19

   12 parte_declara_label: label .

    $default  reduce using rule 12 (parte_declara_label)


state 20

   16 id_label: IDENT . insere_label

    $default  reduce using rule 18 (insere_label)

    insere_label  go to state 30


state 21

   17 id_label: NUMERO . insere_label

    $default  reduce using rule 18 (insere_label)

    insere_label  go to state 31


state 22

   13 label: LABEL lista_id_labels . PONTO_E_VIRGULA
   14 lista_id_labels: lista_id_labels . VIRGULA id_label

    VIRGULA          shift, and go to state 32
    PONTO_E_VIRGULA  shift, and go to state 33


state 23

   15 lista_id_labels: id_label .

    $default  reduce using rule 15 (lista_id_labels)


state 24

    3 programa: PROGRAM IDENT $@1 ABRE_PARENTESES lista_idents $@2 FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 3 (programa)


state 25

   23 var: VAR . declara_vars

    $default  reduce using rule 26 ($@4)

    declara_vars  go to state 34
    declara_var   go to state 35
    $@4           go to state 36


state 26

    8 bloco: parte_declara_labels parte_declara_vars . $@3 parte_declara_procs T_BEGIN comandos T_END

    $default  reduce using rule 7 ($@3)

    $@3  go to state 37


state 27

   19 parte_declara_vars: parte_declara_var .
   21 parte_declara_var: parte_declara_var . var

    VAR  shift, and go to state 25

    $default  reduce using rule 19 (parte_declara_vars)

    var  go to state 38


state 28

   22 parte_declara_var: var .

    $default  reduce using rule 22 (parte_declara_var)


state 29

   11 parte_declara_label: parte_declara_label label .

    $default  reduce using rule 11 (parte_declara_label)


state 30

   16 id_label: IDENT insere_label .

    $default  reduce using rule 16 (id_label)


state 31

   17 id_label: NUMERO insere_label .

    $default  reduce using rule 17 (id_label)


state 32

   14 lista_id_labels: lista_id_labels VIRGULA . id_label

    IDENT   shift, and go to state 20
    NUMERO  shift, and go to state 21

    id_label  go to state 39


state 33

   13 label: LABEL lista_id_labels PONTO_E_VIRGULA .

    $default  reduce using rule 13 (label)


state 34

   23 var: VAR declara_vars .
   24 declara_vars: declara_vars . declara_var PONTO_E_VIRGULA

    IDENT     reduce using rule 26 ($@4)
    $default  reduce using rule 23 (var)

    declara_var  go to state 40
    $@4          go to state 36


state 35

   25 declara_vars: declara_var . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 41


state 36

   27 declara_var: $@4 . lista_id_var DOIS_PONTOS tipo

    IDENT  shift, and go to state 42

    lista_id_var  go to state 43
    id_var        go to state 44


state 37

    8 bloco: parte_declara_labels parte_declara_vars $@3 . parte_declara_procs T_BEGIN comandos T_END

    T_BEGIN   reduce using rule 36 (parte_declara_procs)
    $default  reduce using rule 34 ($@5)

    parte_declara_procs  go to state 45
    $@5                  go to state 46


state 38

   21 parte_declara_var: parte_declara_var var .

    $default  reduce using rule 21 (parte_declara_var)


state 39

   14 lista_id_labels: lista_id_labels VIRGULA id_label .

    $default  reduce using rule 14 (lista_id_labels)


state 40

   24 declara_vars: declara_vars declara_var . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 47


state 41

   25 declara_vars: declara_var PONTO_E_VIRGULA .

    $default  reduce using rule 25 (declara_vars)


state 42

   30 id_var: IDENT .

    $default  reduce using rule 30 (id_var)


state 43

   27 declara_var: $@4 lista_id_var . DOIS_PONTOS tipo
   28 lista_id_var: lista_id_var . VIRGULA id_var

    VIRGULA      shift, and go to state 48
    DOIS_PONTOS  shift, and go to state 49


state 44

   29 lista_id_var: id_var .

    $default  reduce using rule 29 (lista_id_var)


state 45

    8 bloco: parte_declara_labels parte_declara_vars $@3 parte_declara_procs . T_BEGIN comandos T_END

    T_BEGIN  shift, and go to state 50


state 46

   35 parte_declara_procs: $@5 . declara_procs

    PROCEDURE  shift, and go to state 51
    FUNCTION   shift, and go to state 52

    declara_procs  go to state 53
    declara_proc   go to state 54


state 47

   24 declara_vars: declara_vars declara_var PONTO_E_VIRGULA .

    $default  reduce using rule 24 (declara_vars)


state 48

   28 lista_id_var: lista_id_var VIRGULA . id_var

    IDENT  shift, and go to state 42

    id_var  go to state 55


state 49

   27 declara_var: $@4 lista_id_var DOIS_PONTOS . tipo

    INTEGER  shift, and go to state 56
    BOOLEAN  shift, and go to state 57
    STRING   shift, and go to state 58

    tipo  go to state 59


state 50

    8 bloco: parte_declara_labels parte_declara_vars $@3 parte_declara_procs T_BEGIN . comandos T_END

    GOTO     shift, and go to state 60
    IDENT    shift, and go to state 61
    NUMERO   shift, and go to state 62
    READ     shift, and go to state 63
    WRITE    shift, and go to state 64
    WRITELN  shift, and go to state 65
    WHILE    shift, and go to state 66
    REPEAT   shift, and go to state 67
    FOR      shift, and go to state 68
    IF       shift, and go to state 69

    $default  reduce using rule 78 (comando)

    comandos        go to state 70
    comando         go to state 71
    goto            go to state 72
    rot             go to state 73
    atrib_proc_rot  go to state 74
    write           go to state 75
    read            go to state 76
    repetitivo      go to state 77
    while           go to state 78
    repeat          go to state 79
    for             go to state 80
    if              go to state 81
    if_then         go to state 82


state 51

   41 declara_proc: PROCEDURE . $@6 assinatura PONTO_E_VIRGULA bloco $@7 PONTO_E_VIRGULA

    $default  reduce using rule 39 ($@6)

    $@6  go to state 83


state 52

   44 declara_proc: FUNCTION . $@8 assinatura DOIS_PONTOS tipo_retorno PONTO_E_VIRGULA bloco $@9 PONTO_E_VIRGULA

    $default  reduce using rule 42 ($@8)

    $@8  go to state 84


state 53

   35 parte_declara_procs: $@5 declara_procs .
   37 declara_procs: declara_procs . declara_proc

    PROCEDURE  shift, and go to state 51
    FUNCTION   shift, and go to state 52

    $default  reduce using rule 35 (parte_declara_procs)

    declara_proc  go to state 85


state 54

   38 declara_procs: declara_proc .

    $default  reduce using rule 38 (declara_procs)


state 55

   28 lista_id_var: lista_id_var VIRGULA id_var .

    $default  reduce using rule 28 (lista_id_var)


state 56

   31 tipo: INTEGER .

    $default  reduce using rule 31 (tipo)


state 57

   32 tipo: BOOLEAN .

    $default  reduce using rule 32 (tipo)


state 58

   33 tipo: STRING .

    $default  reduce using rule 33 (tipo)


state 59

   27 declara_var: $@4 lista_id_var DOIS_PONTOS tipo .

    $default  reduce using rule 27 (declara_var)


state 60

   79 goto: GOTO . rotulo

    IDENT   shift, and go to state 86
    NUMERO  shift, and go to state 87

    rotulo  go to state 88


state 61

   86 atrib_proc_rot: IDENT . $@14 proc_ou_atrib

    $default  reduce using rule 85 ($@14)

    $@14  go to state 89


state 62

   84 rot: NUMERO . $@13 goto_dest

    $default  reduce using rule 83 ($@13)

    $@13  go to state 90


state 63

  134 read: READ . ABRE_PARENTESES leitura FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 91


state 64

  129 write: WRITE . ABRE_PARENTESES escrita FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 92


state 65

  130 write: WRITELN . ABRE_PARENTESES escrita FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 93


state 66

  143 while: WHILE . $@20 expressao $@21 DO comando_composto

    $default  reduce using rule 141 ($@20)

    $@20  go to state 94


state 67

  145 repeat: REPEAT . $@22 comandos UNTIL expressao

    $default  reduce using rule 144 ($@22)

    $@22  go to state 95


state 68

  148 for: FOR . IDENT $@23 ATRIBUICAO expressao $@24 to_ou_downto DO comando_composto

    IDENT  shift, and go to state 96


state 69

  155 if_then: IF . expressao $@27 THEN comando_composto

    ABRE_PARENTESES  shift, and go to state 97
    IDENT            shift, and go to state 98
    FALSE            shift, and go to state 99
    TRUE             shift, and go to state 100
    NOT              shift, and go to state 101
    NUMERO           shift, and go to state 102

    expressao   go to state 103
    logica      go to state 104
    aritmetica  go to state 105
    termo       go to state 106
    fator       go to state 107


state 70

    8 bloco: parte_declara_labels parte_declara_vars $@3 parte_declara_procs T_BEGIN comandos . T_END
   69 comandos: comandos . PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  shift, and go to state 108
    T_END            shift, and go to state 109


state 71

   70 comandos: comando .

    $default  reduce using rule 70 (comandos)


state 72

   71 comando: goto .

    $default  reduce using rule 71 (comando)


state 73

   72 comando: rot .

    $default  reduce using rule 72 (comando)


state 74

   73 comando: atrib_proc_rot .

    $default  reduce using rule 73 (comando)


state 75

   74 comando: write .

    $default  reduce using rule 74 (comando)


state 76

   75 comando: read .

    $default  reduce using rule 75 (comando)


state 77

   76 comando: repetitivo .

    $default  reduce using rule 76 (comando)


state 78

  138 repetitivo: while .

    $default  reduce using rule 138 (repetitivo)


state 79

  139 repetitivo: repeat .

    $default  reduce using rule 139 (repetitivo)


state 80

  140 repetitivo: for .

    $default  reduce using rule 140 (repetitivo)


state 81

   77 comando: if .

    $default  reduce using rule 77 (comando)


state 82

  153 if: if_then . could_else

    ELSE  shift, and go to state 110

    $default  reduce using rule 158 (could_else)

    could_else  go to state 111


state 83

   41 declara_proc: PROCEDURE $@6 . assinatura PONTO_E_VIRGULA bloco $@7 PONTO_E_VIRGULA

    IDENT  shift, and go to state 112

    assinatura  go to state 113


state 84

   44 declara_proc: FUNCTION $@8 . assinatura DOIS_PONTOS tipo_retorno PONTO_E_VIRGULA bloco $@9 PONTO_E_VIRGULA

    IDENT  shift, and go to state 112

    assinatura  go to state 114


state 85

   37 declara_procs: declara_procs declara_proc .

    $default  reduce using rule 37 (declara_procs)


state 86

   80 rotulo: IDENT . simbora

    $default  reduce using rule 82 (simbora)

    simbora  go to state 115


state 87

   81 rotulo: NUMERO . simbora

    $default  reduce using rule 82 (simbora)

    simbora  go to state 116


state 88

   79 goto: GOTO rotulo .

    $default  reduce using rule 79 (goto)


state 89

   86 atrib_proc_rot: IDENT $@14 . proc_ou_atrib

    ABRE_PARENTESES  shift, and go to state 117
    DOIS_PONTOS      shift, and go to state 118
    ATRIBUICAO       shift, and go to state 119

    $default  reduce using rule 91 ($@16)

    proc_ou_atrib  go to state 120
    $@16           go to state 121
    goto_dest      go to state 122


state 90

   84 rot: NUMERO $@13 . goto_dest

    DOIS_PONTOS  shift, and go to state 118

    goto_dest  go to state 123


state 91

  134 read: READ ABRE_PARENTESES . leitura FECHA_PARENTESES

    IDENT  shift, and go to state 124

    leitura  go to state 125
    leit     go to state 126


state 92

  129 write: WRITE ABRE_PARENTESES . escrita FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 97
    IDENT            shift, and go to state 98
    FALSE            shift, and go to state 99
    TRUE             shift, and go to state 100
    NOT              shift, and go to state 101
    NUMERO           shift, and go to state 102

    expressao   go to state 127
    logica      go to state 104
    aritmetica  go to state 105
    termo       go to state 106
    fator       go to state 107
    escrita     go to state 128
    impr        go to state 129


state 93

  130 write: WRITELN ABRE_PARENTESES . escrita FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 97
    IDENT            shift, and go to state 98
    FALSE            shift, and go to state 99
    TRUE             shift, and go to state 100
    NOT              shift, and go to state 101
    NUMERO           shift, and go to state 102

    expressao   go to state 127
    logica      go to state 104
    aritmetica  go to state 105
    termo       go to state 106
    fator       go to state 107
    escrita     go to state 130
    impr        go to state 129


state 94

  143 while: WHILE $@20 . expressao $@21 DO comando_composto

    ABRE_PARENTESES  shift, and go to state 97
    IDENT            shift, and go to state 98
    FALSE            shift, and go to state 99
    TRUE             shift, and go to state 100
    NOT              shift, and go to state 101
    NUMERO           shift, and go to state 102

    expressao   go to state 131
    logica      go to state 104
    aritmetica  go to state 105
    termo       go to state 106
    fator       go to state 107


state 95

  145 repeat: REPEAT $@22 . comandos UNTIL expressao

    GOTO     shift, and go to state 60
    IDENT    shift, and go to state 61
    NUMERO   shift, and go to state 62
    READ     shift, and go to state 63
    WRITE    shift, and go to state 64
    WRITELN  shift, and go to state 65
    WHILE    shift, and go to state 66
    REPEAT   shift, and go to state 67
    FOR      shift, and go to state 68
    IF       shift, and go to state 69

    $default  reduce using rule 78 (comando)

    comandos        go to state 132
    comando         go to state 71
    goto            go to state 72
    rot             go to state 73
    atrib_proc_rot  go to state 74
    write           go to state 75
    read            go to state 76
    repetitivo      go to state 77
    while           go to state 78
    repeat          go to state 79
    for             go to state 80
    if              go to state 81
    if_then         go to state 82


state 96

  148 for: FOR IDENT . $@23 ATRIBUICAO expressao $@24 to_ou_downto DO comando_composto

    $default  reduce using rule 146 ($@23)

    $@23  go to state 133


state 97

  125 fator: ABRE_PARENTESES . expressao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 97
    IDENT            shift, and go to state 98
    FALSE            shift, and go to state 99
    TRUE             shift, and go to state 100
    NOT              shift, and go to state 101
    NUMERO           shift, and go to state 102

    expressao   go to state 134
    logica      go to state 104
    aritmetica  go to state 105
    termo       go to state 106
    fator       go to state 107


state 98

  121 fator: IDENT . $@18 funcao_ou_nao

    $default  reduce using rule 120 ($@18)

    $@18  go to state 135


state 99

  124 fator: FALSE .

    $default  reduce using rule 124 (fator)


state 100

  123 fator: TRUE .

    $default  reduce using rule 123 (fator)


state 101

  102 expressao: NOT . logica

    ABRE_PARENTESES  shift, and go to state 97
    IDENT            shift, and go to state 98
    FALSE            shift, and go to state 99
    TRUE             shift, and go to state 100
    NUMERO           shift, and go to state 102

    logica      go to state 136
    aritmetica  go to state 105
    termo       go to state 106
    fator       go to state 107


state 102

  122 fator: NUMERO .

    $default  reduce using rule 122 (fator)


state 103

  103 expressao: expressao . AND logica
  104          | expressao . OR logica
  155 if_then: IF expressao . $@27 THEN comando_composto

    AND  shift, and go to state 137
    OR   shift, and go to state 138

    $default  reduce using rule 154 ($@27)

    $@27  go to state 139


state 104

  105 expressao: logica .
  106 logica: logica . MAIOR aritmetica
  107       | logica . MENOR aritmetica
  108       | logica . IGUAL aritmetica
  109       | logica . MENOR MAIOR aritmetica
  110       | logica . DIFERENTE aritmetica
  111       | logica . MAIOR IGUAL aritmetica
  112       | logica . MENOR IGUAL aritmetica

    MAIOR      shift, and go to state 140
    MENOR      shift, and go to state 141
    IGUAL      shift, and go to state 142
    DIFERENTE  shift, and go to state 143

    $default  reduce using rule 105 (expressao)


state 105

  113 logica: aritmetica .
  114 aritmetica: aritmetica . MAIS termo
  115           | aritmetica . MENOS termo

    MAIS   shift, and go to state 144
    MENOS  shift, and go to state 145

    $default  reduce using rule 113 (logica)


state 106

  116 aritmetica: termo .
  117 termo: termo . MULT fator
  118      | termo . DIV fator

    MULT  shift, and go to state 146
    DIV   shift, and go to state 147

    $default  reduce using rule 116 (aritmetica)


state 107

  119 termo: fator .

    $default  reduce using rule 119 (termo)


state 108

   69 comandos: comandos PONTO_E_VIRGULA . comando

    GOTO     shift, and go to state 60
    IDENT    shift, and go to state 61
    NUMERO   shift, and go to state 62
    READ     shift, and go to state 63
    WRITE    shift, and go to state 64
    WRITELN  shift, and go to state 65
    WHILE    shift, and go to state 66
    REPEAT   shift, and go to state 67
    FOR      shift, and go to state 68
    IF       shift, and go to state 69
